--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Frontend Mentor | Single Price Grid Component</title>
 
@@ -28,11 +29,14 @@
   <body>
     <h1>Join our community</h1>
 
-    30-day, hassle-free money back guarantee Gain access to our full library of
-    tutorials along with expert code reviews. Perfect for any developers who are
-    serious about honing their skills. Monthly Subscription &dollar;29 per month
-    Full access for less than &dollar;1 a day Sign Up Why Us Tutorials by
-    industry experts Peer &amp; expert code review Coding exercises Access to
-    our GitHub repos Community forum Flashcard decks New videos every week
+    <p>
+      30-day, hassle-free money back guarantee Gain access to our full library
+      of tutorials along with expert code reviews. Perfect for any developers
+      who are serious about honing their skills. Monthly Subscription &dollar;29
+      per month Full access for less than &dollar;1 a day Sign Up Why Us
+      Tutorials by industry experts Peer &amp; expert code review Coding
+      exercises Access to our GitHub repos Community forum Flashcard decks New
+      videos every week
+    </p>
   </body>
 </html>
